# yzy_uenv

./: .gitignore  Cargo.toml  Makefile  PROTOCOL.md  README.md  code-change-summary-since-last-commit.md  uenv-ctl
Docs/: 260526-1927-worker-pool-mvp-vs-full-design-gap.md  260528-1722-worker-next-phase-plan.md  260530-full-stack-integration-gaps.md  260531-worker-hub-server-protocol-integration.md  260608-verl-gsm8k-real-testing-adjustments.md  260609-worker-full-chain-integration-summary.md  (+24 more)
plugins/code/: Cargo.toml  manifest.yaml  run.sh
plugins/code/scripts/: dscodebench_harness.py  evaluate_code.py
plugins/code/src/: lib.rs
plugins/code/src/backends/: mod.rs
plugins/code/src/backends/dscodebench/: executor.rs  extract.rs  mod.rs  scoring.rs
tools/scale-bench/: Cargo.toml
tools/scale-bench/src/: config.rs  lib.rs  live.rs  main.rs  plan.rs
uenv-bridge/core/: Cargo.toml  README.md  build.rs
uenv-bridge/core/src/: core.rs  l1_mapping.rs  lib.rs  main.rs  protocol.rs  serve_client.rs  server_api.rs  service.rs
uenv-hub/: .gitignore  Cargo.toml  README.md
uenv-hub/config/: hub.example.toml  hub.prod.toml
uenv-hub/config/benchmark/dscodebench/: evaluate_code.py
uenv-hub/config/benchmark/math-smoke-fixtures/: pubmedqa_smoke.json  scitab_smoke.json
uenv-hub/deploy/: Dockerfile  docker-compose.yml  uenv-hub.service
uenv-hub/docs/: api.md  data-model.md  errors.md  openapi.yaml  uenv-cli-guide.md  uenv-hub-service-integration.md
uenv-hub/migrations/: 0001_init.sql  0002_env_packages.sql
uenv-hub/proto/: hub.proto
uenv-hub/scripts/: backup.sh  seed-export.sh  seed-import.sh  start-hub.sh
uenv-hub/src/: config.rs  grpc.rs  lib.rs  main.rs  metadata.rs  metrics.rs  storage.rs  version.rs
uenv-hub/uenv-hub-client/: Cargo.toml
uenv-hub/uenv-hub-client/src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  manifest_file.rs  scaffold.rs
uenv-hub/uenv-hub-core/: Cargo.toml
uenv-hub/uenv-hub-core/src/: auth.rs  convert.rs  db.rs  error.rs  lib.rs  models.rs  package.rs  repository.rs  schema_validator.rs  seed.rs  templates.rs
uenv-hub/uenv-hub-core/src/domain/: interface.rs  manifest.rs  mod.rs  version.rs
uenv-hub/uenv-hub-core/tests/: repository.rs
uenv-hub/uenv-hub-server/: Cargo.toml
uenv-hub/uenv-hub-server/src/: config.rs  errors.rs  etag.rs  lib.rs  main.rs  middleware.rs  ratelimit.rs  routes.rs  service.rs  state.rs
uenv-hub/uenv-hub-server/tests/: e2e.rs
uenv-hub/uenv-hub-types/: Cargo.toml
uenv-hub/uenv-hub-types/src/: lib.rs
uenv-mock-scheduler/: Cargo.toml  README.md
uenv-mock-scheduler/examples/: gen_gsm8k_fixture.rs  gen_math_fixture.rs
uenv-mock-scheduler/src/: cli.rs  config.rs  lib.rs  main.rs  proto.rs  service.rs
uenv-mock-scheduler/tests/: m1_contract_chaos_tests.rs
uenv-server/: Cargo.toml  README.md  build.rs
uenv-server/proto/: server.proto
uenv-server/proto/uenv/v1/: common.proto  episode.proto
uenv-server/src/: admin_http.rs  admin_query.rs  admission.rs  agent_job.rs  agent_pool.rs  backend.rs  config.rs  control_plane.rs  episode_context.rs  episode_coordinator.rs  execution_backend.rs  grpc.rs  lib.rs  main.rs  metrics.rs  pool.rs  ports.rs  proto.rs  registry.rs  result_finalizer.rs  scheduler.rs  service.rs  state.rs  trajectory.rs  trajectory.rs.bak_feat  wal.rs
uenv-server/src/agent_pool/: mod.rs  registry.rs  tests.rs  types.rs
uenv-server/src/grpc/: admin_service.rs  server_service.rs
uenv-server/src/persistence/: mod.rs  recovery.rs  schema.rs  sqlite.rs
uenv-server/src/scheduler/: mod.rs  traits.rs
uenv-server/src/service/: admin.rs  episode.rs  mod.rs  prelude_and_guards.rs  rpc.rs  support.rs  tests.rs
uenv-server/src/trajectory/: config.rs  http.rs  mod.rs  prelude.rs  store.rs  tests.rs
uenv-server/stress_test/: ark_real_llm_preflight.py  ark_real_llm_proxy.py  distributed_stress_runtime.py  monitor.sh  run_distributed_gate3_code.py  run_distributed_gate4_swe.py  run_openhands_stress.sh  run_stress_suite.py  stress_suite.json  stress_test.py  stress_test_1k.py  stress_test_async.py  stress_test_common.py  stress_test_real.py  stress_test_train.py  test_stress_suite.py  trajectory_stress_test.py  worker_fleet_supervisor.py
uenv-server/tests/: e2e_episode_flow.rs  swe_agent_orchestration.rs
uenv-worker/: Cargo.toml  README.md  build.rs
uenv-worker/proto/: worker.proto  worker_service.proto
uenv-worker/python/uenv-core/: pyproject.toml
uenv-worker/python/uenv-core/src/uenv/: __init__.py  abc.py  mcp_environment.py
uenv-worker/python/uenv-reward/: pyproject.toml
uenv-worker/sandbox_profiles/: full.json  restricted.json
uenv-worker/src/: config.rs  executor.rs  grpc.rs  inference.rs  lib.rs  llm.rs  main.rs  metrics.rs  proto.rs  runtime.rs  state.rs  warmpool.rs
uenv-worker/src/backend/: mod.rs  podman.rs  process.rs
uenv-worker/src/cli/: mod.rs
uenv-worker/src/config/: mod.rs
uenv-worker/src/control_plane/: client.rs
uenv-worker/src/episode/: async_context.rs  executor.rs  mod.rs  model_client.rs  payload.rs  reward_engine.rs  rollout_meta.rs
uenv-worker/src/grpc_server/: worker_service.rs
uenv-worker/src/hub/: env_resolver.rs  mod.rs
uenv-worker/src/logging/: mod.rs
uenv-worker/src/plugin/: host.rs  instance.rs  mod.rs
uenv-worker/src/plugin/arpc/: mod.rs
uenv-worker/src/pool/: mod.rs  warmup_pool.rs  warmup_sizer.rs
uenv-worker/src/registry/: worker_pool.rs
uenv-worker/src/runtime_gateway/: mod.rs
uenv-worker/src/swe/: artifact.rs  artifact_store.rs  command_policy.rs  dataset.rs  env_package.rs  grader.rs  harness.rs  hub_config.rs  image_cache.rs  instance_pool.rs  mod.rs  pro_eval.rs  repo_specs.rs  resettable.rs  session.rs  spec.rs  trajectory.rs  trajectory.rs.bak_v22  trajectory_upload.rs  variant.rs
uenv-worker/src/wal/: mod.rs
uenv-worker/tests/: dscodebench_golden.rs  m2_runtime_with_mock.rs  m3_cli_serve_with_config.rs  m4_code_plugin_host.rs  m4_plugin_host_process.rs  m5_code_episode_executor.rs  m5_episode_executor.rs  m6_warmup_pool.rs  swe_docker_integration.rs  swe_mvp_closure.rs  trajectory_upload_e2e.rs
(+428 files in other folders)
