[workspace]
resolver = "2"
members = [
    "uenv-hub-types",
    "uenv-hub-core",
    "uenv-hub-server",
    "uenv-hub-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "UEnvHub - persistent environment metadata registry for the UEnv framework"

[workspace.dependencies]
# Shared internal crates
uenv-hub-types = { path = "uenv-hub-types" }
uenv-hub-core = { path = "uenv-hub-core" }
uenv-hub-client = { path = "uenv-hub-client" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP server
axum = "0.7"
tower = { version = "0.5", features = ["limit", "buffer", "util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# Domain
semver = "1"
jsonschema = { version = "0.18", default-features = false }
argon2 = "0.5"
password-hash = "0.5"

# Archives (scaffold templates)
tar = "0.4"
flate2 = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Errors / misc
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
dirs = "5"

# Testing
insta = { version = "1", features = ["json"] }
wiremock = "0.6"
tempfile = "3"
