[package]
name = "uenv-mock-scheduler"
version = "0.1.0"
edition = "2024"
description = "UEnv Mock Scheduler — ControlPlane stub for Worker Pool MVP"

[[bin]]
name = "uenv-mock-scheduler"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
