[package]
name = "uenv-mock-scheduler"
version = "0.1.0"
edition = "2024"
description = "UEnv Mock Scheduler — ControlPlane stub for Worker Pool MVP"

[[bin]]
name = "uenv-mock-scheduler"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-stream = "0.1"
futures = "0.3"
