[package]
name = "uenv-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "uenv-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"
