[package]
name = "uenv-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "uenv_server"
path = "src/lib.rs"
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
anyhow = "1"
thiserror = "2"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
