[package]
name = "uenv-worker"
version = "0.1.0"
edition = "2024"
description = "UEnv Worker - Execute environment episodes"

[[bin]]
name = "uenv-worker"
path = "src/main.rs"

[[bin]]
name = "uenv-math-plugin"
path = "src/bin/uenv-math-plugin.rs"

[dependencies]
uenv-math-env = { path = "../plugins/math" }
uenv-common = { path = "../uenv-common" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
snafu = "0.8"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tower = "0.5"
sha2 = "0.10"
axum = "0.8"
crc32fast = "1"
flate2 = "1"
hyper-util = { version = "0.1", features = ["tokio"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[build-dependencies]
tonic-prost-build = "0.14"
