[package]
name = "uenv-code-env"
version = "0.1.0"
edition = "2024"
description = "CodeEnv (L2) — code execution backends for uenv-code-plugin"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "time", "fs", "rt", "macros"] }
