[package]
name = "uenv-adapter-core"
version = "0.1.0"
edition = "2024"
description = "Rust adapter core for Python training-framework shims"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
