[workspace]

[package]
name = "uenv-adapter-core"
version = "0.1.0"
edition = "2024"
description = "Rust adapter core for Python training-framework shims"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
