[package]
name = "uenv-hub-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UEnvHub client SDK + uenv CLI integration"

[[bin]]
name = "uenv"
path = "src/bin/uenv.rs"

[dependencies]
uenv-hub-types.workspace = true
uenv-hub-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
sha2.workspace = true
hex.workspace = true
tar.workspace = true
flate2.workspace = true
dirs.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
